<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B9F6CA"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText">

    <EditText
        android:id="@+id/web"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="643dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_uri" /> />

    <EditText
        android:id="@+id/loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="507dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_loc" />

    <EditText
        android:id="@+id/sharetxt"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="390dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_share" />

    <Button
        android:id="@+id/buttonweb"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="603dp"
        android:background="#B9F6CA"
        android:backgroundTint="@android:color/primary_text_dark_nodisable"
        android:onClick="web"
        android:text="@string/button_uri" />

    <Button
        android:id="@+id/buttonloc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="459dp"
        android:onClick="location"
        android:text="@string/button_loc" />

    <Button
        android:id="@+id/buttontxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="207dp"
        android:layout_marginBottom="341dp"
        android:onClick="text"
        android:text="@string/button_share" />
</RelativeLayout>